0512: API key external, mini PKL cache, pause inference, UI polish
Combined squash of local commits 0511 + 0512 with datasets/*.tgz stripped
from the index (now ignored via .gitignore).

Backend
- Externalized SiliconFlow API key to application.yml / env var
- JobExecutor.cancel(): destroy() with 3s grace, then destroyForcibly()
- Bulk delete + stale detection; cancelled status reserved on startup
- POST /api/jobs/{id}/cancel endpoint; bulk-delete accepts 'cancelled' filter
- Per-clip mini infos pkl cache wired via --mini-infos-cache

Frontend
- New /home overview, /review dashboard, /compare results view
- Clip stars + filter; AI optimization deep-link from JobCard
- Pause button on running jobs; cancelled status badge (orange)
- VideoModal: minimal keymap (Space / Left / Right / B / Esc)
- Removed Fullscreen + Enlarge buttons; fixed Play/Pause width jitter
- CSV (jobs) / JSON (annotations) export

Tools / configs
- generate_clip_preview.py: scene metadata enrichment, --no-scene-meta
- build_clips_meta_from_nuscenes.py for full_1 dataset
- nusc_common: pre-filter samples by scene_token (34149 -> 3376)
- create_mini_val_infos / build_infos_for_sample_tokens helpers
- visualize_results.py: --mini-infos-cache, ASCII title separator
- configs/lion.py, final.py: patched LION -> SpMiddleResNetFHD for Windows
- start_server.bat: :activate_conda subroutine with graceful fallback

Repo hygiene
- .gitignore: ignore datasets/, *.tgz, *.tar, *.tar.gz, ppt/

Co-authored-by: Cursor <cursoragent@cursor.com>